--- a/client/imports/ui/components/ipInfo.html
+++ b/client/imports/ui/components/ipInfo.html
@@ -9,7 +9,8 @@
 				    <input class="prompt" type="text" id="self-state" name="self-state" placeholder=" Enter your zipcode here:" />
 				    <i class="search icon"></i>
 			    {{/if}}
-			  </div>
+				</div>
+				<div class="results"></div>
 			</form>
 		</div>
 </template>
