--- a/client/imports/ui/components/myReps.html
+++ b/client/imports/ui/components/myReps.html
@@ -1,6 +1,6 @@
 <template name="myReps">
 	<div id="legislators" class="ui" >
-		<h3 class="ui center aligned header"> Representatives for {{location.postal}}, {{location.state}}.</h3>
+		<h3 class="ui center aligned block header"> Your Elected Congress ({{location.state}}, {{location.postal}})</h3>
 
 		<div class="ui container">
 
