--- a/client/imports/ui/style/index.sass
+++ b/client/imports/ui/style/index.sass
@@ -30,13 +30,8 @@ body
 
 #main-menu
   .logo 
-    height: 9rem
-    width: 18rem
-    filter: hue-rotate(270deg);
-    -webkit-filter: hue-rotate(270deg);
-    -moz-filter: hue-rotate(180deg);
-    -o-filter: hue-rotate(180deg);
-    -ms-filter: hue-rotate(180deg);
+    height: 5rem
+    width: 15rem
 
 .segment
 	padding: 1rem !important
@@ -76,3 +71,12 @@ body
 
 .ui .label
   background-color: $clr-accent !important
+  color: $clr-white !important
+
+#fund-raiser .content>div 
+   margin-top: 1rem
+   float: right
+   
+   .meta
+    margin:0 !important
+  
