styled login and signup section of header

--- a/client/imports/ui/components/register.html
+++ b/client/imports/ui/components/register.html
@@ -1,9 +1,13 @@
 <template name="register">
-  <form id="signup">
+
+  <form class="ui form" id="signup">
     <label for="emailAddress">Email Address</label>
     <input type="email" name="emailAddress" />
     <label for="password">Password</label>
     <input type="password" name="password" />
-    <input type="submit" value="Sign Up" />
+    <button class="ui button" type="submit" value="Sign Up" >Sign Up</button>
+    <button class="ui button" type="submit" value="Log in">
+	    {{> loginButtons}}}
+    </button>
   </form>
 </template>
