--- a/client/lib/packages/semantic-ui/theme.config.import.less
+++ b/client/lib/packages/semantic-ui/theme.config.import.less
@@ -40,9 +40,9 @@
 
 /* Collections */
 @breadcrumb : 'default';
-@form       : 'default';
+@form       : 'material';
 @grid       : 'default';
-@menu       : 'default';
+@menu       : 'material';
 @message    : 'default';
 @table      : 'default';
 
