--- a/client/imports/ui/layouts/ApplicationLayout.html
+++ b/client/imports/ui/layouts/ApplicationLayout.html
@@ -1,4 +1,5 @@
 <template name="ApplicationLayout">
+    {{> errors}}    
     {{> MainMenu}}
     <div class="ui grid">
         <div id="sideBar" class="five wide column fixed">
