modifying polls... but making new branch for such

--- a/client/imports/ui/components/pollster.html
+++ b/client/imports/ui/components/pollster.html
@@ -1,7 +1,7 @@
 <template name="pollster">
 	<div id="charts" class="ui container">
 		<div class="ui cards">
-			{{#each charts}}
+			{{#each charts1}}
 				{{#if estimates}}
 				<div class="chart ui card">
 					<div class="ui content">
@@ -13,6 +13,20 @@
 				</div>
 				{{/if}}
 			{{/each}}
+		</div>
+		<div class="ui cards">
+			{{#each charts2}}
+				{{#if estimates}}
+				<div class="chart ui card">
+					<div class="ui content">
+						{{> highchartsHelper chartId=this.slug chartWidth="100%" charHeight="100%" chartObject=topChart}}
+					</div>
+					<div class="ui extra content centered sub header">
+						<h5>Updated on {{date}}</h5>
+					</div>					
+				</div>
+				{{/if}}
+			{{/each}}			
 		</div>
 	</div>
 </template>
