added some more polls

--- a/client/imports/ui/components/pollster.html
+++ b/client/imports/ui/components/pollster.html
@@ -1,8 +1,24 @@
 <template name="pollster">
-	<div id="charts" class="ui container">
-		<div class="ui cards">
-			{{#each charts1}}
-				{{#if estimates}}
+<div id="charts" class="ui fluid container">
+	<div class="ui three column grid">
+		{{#each charts1}}
+			{{#if estimates}}
+			<div class="column">				
+				<div class="chart ui fluid card">
+					<div class="ui content">
+						{{> highchartsHelper chartId=this.slug chartWidth="100%" charHeight="100%" chartObject=topChart}}
+					</div>
+					<div class="ui extra content centered sub header">
+						<h5>Updated on {{date}}</h5>
+					</div>					
+				</div>
+			</div>
+			{{/if}}
+		{{/each}}
+
+		{{#each charts2}}
+			{{#if estimates}}
+			<div class="column">			
 				<div class="chart ui card">
 					<div class="ui content">
 						{{> highchartsHelper chartId=this.slug chartWidth="100%" charHeight="100%" chartObject=topChart}}
@@ -11,22 +27,9 @@
 						<h5>Updated on {{date}}</h5>
 					</div>					
 				</div>
-				{{/if}}
-			{{/each}}
-		</div>
-		<div class="ui cards">
-			{{#each charts2}}
-				{{#if estimates}}
-				<div class="chart ui card">
-					<div class="ui content">
-						{{> highchartsHelper chartId=this.slug chartWidth="100%" charHeight="100%" chartObject=topChart}}
-					</div>
-					<div class="ui extra content centered sub header">
-						<h5>Updated on {{date}}</h5>
-					</div>					
-				</div>
-				{{/if}}
-			{{/each}}			
-		</div>
+			</div>
+			{{/if}}
+		{{/each}}			
 	</div>
+</div>
 </template>
