--- a/client/imports/ui/components/register.html
+++ b/client/imports/ui/components/register.html
@@ -12,3 +12,10 @@
     </form>
   </div>
 </template>
+
+<template name="login">
+  <div id="login" class="ui basic compact button">
+    <i class="user circular fitted icon"></i>
+    {{> loginButtons}}
+  </div>
+</template>
